--- a/styles/shared/header/_index.scss
+++ b/styles/shared/header/_index.scss
@@ -1,1 +1,9 @@
 @import 'header-secondary';
+
+// granular sass
+@import 'nav-primary';
+
+// one-off style
+.header-primary {
+  margin-top: 24px;
+}
