--- a/styles/shared/header/_header-secondary.scss
+++ b/styles/shared/header/_header-secondary.scss
@@ -43,6 +43,12 @@
       display: flex;
       align-items: center;
       gap: 8px;
+
+      @include media-breakpoint-up(lg) {
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 8px;
+      }
     }
 
     li:nth-child(1) {
