--- a/styles/index.scss
+++ b/styles/index.scss
@@ -21,6 +21,9 @@
 //homepage
 @import './homepage/index';
 
+//catalog
+@import './catalog/index';
+
 body {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
