--- a/styles/homepage/_home-social.scss
+++ b/styles/homepage/_home-social.scss
@@ -6,12 +6,18 @@
 
     a {
       display: flex;
-      border: 1px solid $gray-secondary;
+      border: 1px solid $gray-primary;
       border-radius: 50%;
       width: 50px;
       height: 50px;
       justify-content: center;
       align-items: center;
+      transition: color 0.2s linear, background-color 0.2s linear;
+
+      &:hover {
+        color: $white;
+        background-color: $gray-primary;
+      }
     }
 
     i[class='fa-'] {
